# Elearning

./: .gitignore  ATKINSON_EDCI569_Design_Document.md  ID_Reflection.md  README.md  context.md  copyright_and_permissions.md
.agent/: context.md
.agent/blueprints/: costar_prompts.md
.agent/rules/: aesthetics.md  bevy.md  pedagogy.md  styling.md
.agent/workflows/: build_module.md  session-2.md  session-7.md  sovereign-release.md
docs/: ATKINSON EDCI 569 Design Document.docx.md  ATKINSON_EDCI569_Storyboard.md  Joshua Storyboard.md  Revised Project Plan.md  troubleshooting.md
forge-web/: index.html  script.js  styles.css
forge-web/assets/syllabus/: module_1.toml
forge-web/wasm/: sovereign-sandbox.d.ts  sovereign-sandbox.js  sovereign-sandbox_bg.wasm.d.ts
local-ai-architect-elearning/: DEVELOPMENT.md  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
local-ai-architect-elearning/public/: technical_bible.md
local-ai-architect-elearning/public/sandbox/: game.html  index.html  script.js  sovereign-sandbox.d.ts  sovereign-sandbox.js  sovereign-sandbox_bg.wasm.d.ts  sovereign_sandbox_bg.d.ts  sovereign_sandbox_bg.js  sovereign_sandbox_bg_bg.wasm.d.ts
local-ai-architect-elearning/public/sandbox/assets/: Blueprint_EDCI56900.md  Blueprint_Infographic.html  Blueprint_Prompt.md
local-ai-architect-elearning/public/sandbox/wasm/: sovereign-sandbox.d.ts  sovereign-sandbox.js  sovereign-sandbox_bg.wasm.d.ts
local-ai-architect-elearning/src/: App.jsx  index.css
local-ai-architect-elearning/src/components/: ChunkedVideoPlayer.jsx  ErrorBoundary.jsx  NeonWizardChat.jsx  StoryboardView.jsx
local-ai-architect-elearning/src/data/: moduleData.jsx  sandboxRegistry.json
local-ai-architect-elearning/src/pages/: Documentation.jsx  HomePage.jsx  KnowledgeCheck.jsx  ModuleOne.jsx  ModuleThree.jsx  ModuleTwo.jsx  MuseumOfMechanics.jsx  SandboxEmbed.jsx
module-1-setup/: README.md
module-2-logic/: README.md
module-3-implementation/: README.md
module-4-demo/: README.md
moshi/: README.md  gitattributes  tokenizer_spm_32k_3.model
sovereign-sandbox/: .gitignore  CRITICAL_PATH.md  Cargo.toml  DESIGN_DOC_PUBLIC_RELEASE.md  INVENTORY_DEMO.md  LITPRG_OVERVIEW.md  context.md  download_model.sh  generate_sfx.py  test_toml.rs
sovereign-sandbox/.agent/: context.md
sovereign-sandbox/assets/syllabus/: module_1.toml
sovereign-sandbox/src/: audio.rs  combat.rs  game_world.rs  inventory.rs  main.rs  puzzle.rs  quest_ui.rs  quiz.rs  scoring.rs  story_mode.rs  teacher.rs  title_screen.rs
sovereign-sandbox/src/ai/: candle_integration.rs  hearing.rs  memory.rs  mod.rs  moshi.rs  persona.rs
sovereign-sandbox/src/syllabus/: mod.rs
sovereign-sandbox/src/ui/: knowledge_popup.rs  mod.rs  victory_screen.rs
sovereign-sandbox/tests/: test_toml.rs
sovereign-sandbox/wasm_out/: sovereign-sandbox.js
(+1 files in other folders)
