[package]
name = "sovereign-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
# The Engine
bevy = { version = "0.15", features = ["dynamic_linking"] } # dynamic_linking for faster dev builds

# The Scripting Layer (Safe Logic)
# Using generic scripting crate for now, assuming compatibility, or use rhai directly if needed.
# For this demo, we will use raw Rhai to demonstrate the "Sandboxing" capability manually first.
rhai = "1.19.0"

# UI Inspection (for the "Workbench" feel)
bevy-inspector-egui = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
hnsw_rs = "0.3.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database
rusqlite = { version = "0.33.0", features = ["bundled"] }

# AI / Inference
candle-core = { version = "0.8.2" }
candle-transformers = { version = "0.8.2" }
candle-nn = { version = "0.8.2" }
tokenizers = { version = "0.21.0" }
tokio = { version = "1.41.0", features = ["full"] }
crossbeam-channel = "0.5"
anyhow = "1.0"
cpal = "0.15"
rubato = "0.14"
hound = "3.5.0"
rand = "0.8.5"

# Profile optimizations for Bevy
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
